# agent-om

./: .gitignore  BUILD.md  CONTRIBUTING.md  LICENSE  PUBLISH.md  README.md  build_binary.spec  install.sh  pyproject.toml
.github/workflows/: release.yml
agent_om/: __init__.py  __main__.py  agent.py
build_scripts/: build_linux.sh  build_macos.sh  build_windows.ps1
creatoragent/: __init__.py  __main__.py  agent.py
docs/: FIREBASE_SETUP.md  index.html  sw.js
web/: render.yaml  requirements.txt  server.py
web/static/: index.html  manifest.json  sw.js
